syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service RegistraChaveService {
  rpc registra(RegistroChaveRequest) returns (RegistroChaveResponse) {}
}

enum TipoChave {
  INDETERMINADA    = 0;
  CPF              = 1;
  CELULAR          = 2;
  EMAIL            = 3;
  ALEATORIA        = 4;
}
enum TipoConta {
  NAO_ESPECIFICADO       = 0;
  CONTA_CORRENTE         = 1;
  CONTA_POUPANCA         = 2;
}

message RegistroChaveRequest {
  string    clienteId    = 1;
  TipoChave tipoChave   = 2;
  string    valorChave   = 3;
  TipoConta tipoConta   = 4;
}

message RegistroChaveResponse {
  string clienteId   = 1;
  string pixId       = 2;
}